tests/FromToStr/fail/duplicate-str.stderr
error: duplicate value! both are [VariantOne]
 --> tests/FromToStr/fail/duplicate-str.rs:6:24
  |
6 |     #[fromtostr(rename("VariantOne"))]
  |                        ^^^^^^^^^^^^

error: duplicate value! both are [VariantOne]
 --> tests/FromToStr/fail/duplicate-str.rs:5:5
  |
5 |     VariantOne,
  |     ^^^^^^^^^^
